@startuml
skinparam backgroundColor #ffffff
skinparam classAttributeIconSize 0
hide circle

abstract class Command {
CommandResult execute()
}

class AddCommand
interface Model
abstract class Task
class Todo
class Event
class Deadline

Command <|- AddCommand
AddCommand .right.> Model

Task <|-- Todo
Task <|-- Event
Task <|-- Deadline

AddCommand ..> Task
Task "*" -> Model

@enduml
